Placed bonus games into own pages, added to portfolio

--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -14,6 +14,13 @@
     <strong>Cookie Clicker</strong>
   </header>
   <main>
+    <nav id="nav">
+      <strong>Check Out My Other Games!</strong>
+      <ul>
+        <li><a href="../checkpoint-3/minesweeper.html" target="_blank">Minesweeper</a></li>
+        <li><a href="../checkpoint-3/memory.html" target="_blank">Memory-Matching</a></li>
+      </ul>
+    </nav>
     <div class="grid-container">
       <div class="box-1">
         <p>Welcome to Cookie Clicker!</p>
@@ -38,43 +45,7 @@
         <input type="button" id="btnspend500" value="1000 Points: Increase multiplier 2x"></button>
         <p id="message"></p>
       </div>
-      <div class="box-5">
-        <div class="minesweeper">
-          <div class="title">Bonus Game: Minesweeper</div>
-          <div class="titleimg titleimg2"></div>
-          <p>This is a small Minesweeper-esque game I made. The object of this game is to get as high of a score as you
-            can without hitting a bomb.</p>
-          <p>Click the squares to reveal a number between 1 and 3, and add it to your score. </p>
-          <strong>Try to avoid to bombs, if you hit one it's Game Over!</strong>
-          &nbsp;
-          <p id="message2"></p>
-          &nbsp;
-          <strong>Score:</strong>
-          <div id="scorekeeper"></div>
-          <div id="settings">
-            <ul id="difficulty">
-              <li id="easy" class="selected">Easy</li>
-              <li id="normal">Normal</li>
-              <li id="hard">Hard</li>
-            </ul>
-          </div>
-          <div id="board"></div>
-          <div id="newgame">New Game</div>
-        </div>
-      </div>
-      <div class="box-6">
-        <div class="matchinggame">
-            <div class="title">Bonus Game #2: Memory Game</div>
-          <div class="titleimg titleimg3"></div>
-          <p>Here's another bonus game to try! This one is a Memory Matching game.</p>
-          <p>Click a square to reveal it's number and try to find it's matching number in the grid.</p>
-          <p>If you find all of the pairs, you win!</p>
-          &nbsp;
-          <div id="winmessage">You found all the pairs! You Win!</div>
-          <div id="board2"></div>
-          <div id="newgame2">New Game</div>
-        </div>
-      </div>
+    </div>
     </div>
   </main>
 
