--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -45,6 +45,8 @@
         <li><a href="../09week/customer-satisfaction/index.html" target="_blank">Survey Form</a></li>
         <li><a href="../09week/towers-of-hanoi/index.html" target="_blank">Towers of Hanoi</a></li>
         <li><a href="../checkpoint-3/index.html" target="_blank">Cookie Clicker</a></li>
+        <li><a href="../checkpoint-3/minesweeper.html" target="_blank">Minesweeper</a></li>
+        <li><a href="../checkpoint-3/memory.html" target="_blank">Memory-Matching</a></li>
       </ul>
     </nav>
   </main>
