--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -73,16 +73,16 @@ create buttons to submit and reset the form -->
       <div class="clickbox">
         <p>Contact Preference:</p>
         <div class="contact">
-          <input type="checkbox" name="vehicle1" value="Email"> 
-          <label for="vehicle1">Email</label>
+          <input type="checkbox" name="Email" value="Email"> 
+          <label for="Email">Email</label>
         </div>
         <div class="contact">
-          <input type="checkbox" name="vehicle2" value="Phone"> 
-          <label for="vehicle2">Phone</label>
+          <input type="checkbox" name="Phone" value="Phone"> 
+          <label for="Phone">Phone</label>
         </div>
         <div class="contact">
-          <input type="checkbox" name="vehicle3" value="LinkedIn"> 
-          <label for="vehicle3">LinkedIn</label>
+          <input type="checkbox" name="LinkedIn" value="LinkedIn"> 
+          <label for="LinkedIn">LinkedIn</label>
         </div>
       </div>
       
