--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ron Hajewski Clicky Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
-    <script src="main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     </head>    
   <body>  
+    <div id="message-display">
+      <p>CLICK THE BAD GUY!</p>
+    </div>
     <div id="screen-1">
       <div class="box"></div>
       <div class="box"></div>
@@ -40,6 +41,16 @@
       <div class="box"></div>
     </div>
       <div id="points">0</div>
+      <div id="buttonbox">
+        <button class="powerup1">Power Up 2X!</button>
+        <!-- <button class="powerup2">Power Up 3X!</button>
+        <button class="powerup3">Power Up 4X!</button>
+        <button class="powerup4">Power Up 5X!</button>
+        <button class="powerup5">Power Up 6X!</button>
+        <button class="powerup6">Power Up 7X!</button>
+        <button class="powerup7">Power Up 8X!</button> -->
+      </div>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
     <script src="./script.js"></script>
   </body>
