--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -114,7 +114,9 @@
       <div class="box box10"></div>
       <div class="box box11"><p>I ♥ HTML</p></div> <!-- animated hover banner -->
       <div class="box box12"></div>
-      <div class="box box13"><p>Hi, my name is Ron. I'm a full-stack web developer student at Austin Coding Academy. I love building web sites with HTML5, CSS3 and JavaScript. I am available for both freelance and long term projects. Use the contact link to get in touch. </p><a class="bigcontact" href="#">Contact</a></div>
+      <div class="box box13"><p>Hi, my name is Ron. I'm a full-stack web developer student at Austin Coding Academy. I love building web sites with HTML5, CSS3 and JavaScript. I am available for both freelance and long term projects. Use the contact link to get in touch. </p>
+        <a class="bigcontact" href="https://konarie1990.github.io/web-workbook/09week/customer-satisfaction/index.html">Contact</a>
+      </div>
       <div class="box box14"><p>CSS IS FUN!</p></div> <!-- another animated hover banner -->
       <div class="box box15"></div>
       <div class="box box16"></div>
@@ -138,34 +140,27 @@
       <div class="box box34"></div>
       <div class="box box35"></div>
       <div class="box port box36"></div>
-      <div class="box port box37"><a href="#"><p>RESUME</p></a></div> <!-- blinky link box -->
-      <div class="box port box38"><a href="#"><p>TRAVEL-GRAM</p></a></div> <!-- blinky link box -->
-      <div class="box port box39"><a href="#"><p>BLOG</p></a></div> <!-- blinky link box -->
-      <div class="box port box40"><a href="#"><p>JAVASCRIPT</p></a></div> <!-- blinky link box -->
+      <div class="box port box37"><a href="https://konarie1990.github.io/web-workbook/01week/resume/index.html"><p>RESUME</p></a></div> <!-- blinky link box -->
+      <div class="box port box38"><a href="https://konarie1990.github.io/web-workbook/08week/dom-events/index.html"><p>DOM EVENTS</p></a></div> <!-- blinky link box -->
+      <div class="box port box39"><a href="https://konarie1990.github.io/web-workbook/02week/blog/index.html"><p>BLOG</p></a></div> <!-- blinky link box -->
+      <div class="box port box40"><a href="https://konarie1990.github.io/checkpoint1/index.html"><p>RETAIL WEB</p></a></div> <!-- blinky link box -->
       <div class="box port box41"></div>
       <div class="box box42"></div>
-      <div class="box port box43"><a href="#"><p>TRANSITIONS</p></a></div> <!-- blinky link box -->
-      <div class="box port box44"><a href="#"><p>BIO</p></a></div> <!-- blinky link box -->
-      <div class="box port box45"><a href="#"><p>AIRPLANE</p></a></div> <!-- blinky link box -->
-      <div class="box port box46"><a href="#"><p>NASA</p></a></div> <!-- blinky link box -->
+      <div class="box port box43"><a href="https://konarie1990.github.io/web-workbook/05week/transitions-and-transformations/index.html"><p>TRANSITIONS</p></a></div> <!-- blinky link box -->
+      <div class="box port box44"><a href="https://konarie1990.github.io/web-workbook/02week/bio/index.html"><p>BIO</p></a></div> <!-- blinky link box -->
+      <div class="box port box45"><a href="https://konarie1990.github.io/web-workbook/04week/welcome-to-our-site/index.html"><p>RESPONSIVE</p></a></div> <!-- blinky link box -->
+      <div class="box port box46"><a href="https://konarie1990.github.io/web-workbook/08week/tic-tac-toe/index.html"><p>TIC-TAC-TOE</p></a></div> <!-- blinky link box -->
       <div class="box port box47"></div>
       <div class="box box48"></div>
-      <div class="box port box49"><a href="#"><p>TIC-TAC-TOE</p></a></div> <!-- blinky link box -->
-      <div class="box port box50"><a href="#"><p>CALCULATOR</p></a></div> <!-- blinky link box -->
+      <div class="box port box49"><a href="https://konarie1990.github.io/web-workbook/09week/towers-of-hanoi/index.html"><p>TOWERS OF HANOI</p></a></div> <!-- blinky link box -->
+      <div class="box port box50"><a href="https://konarie1990.github.io/web-workbook/checkpoint-3/index.html"><p>PLAY!</p></a></div> <!-- blinky link box -->
       <div class="box box51"></div>
       <div class="box box52"></div>
       <div class="box box53"></div>
       <div class="box box54"><p>CONTACT</p></div> <!-- contact box with data entry -->
       <div class="box box55">
         <p>Contact Me:</p>
-        <p>Name</p>
-        <div>
-          <input class="ibox" name="text">
-        </div>
-        <p>e-mail</p>
-        <div>
-          <input class="ibox" name="text">
-        </div>
+        <a class="bigcontact" href="https://konarie1990.github.io/web-workbook/09week/customer-satisfaction/index.html">Contact</a>
       </div>  
       <div class="box box56"></div>
       <div class="box box57"></div>
