finished simple cookie clicker

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Clicker Game</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <script src="main.js"></script>
-</head>
-<body>
-  <div class="container">
-    <div class="box">
-      <div class="clickable">
-
-      </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Cookie Clicker</title>
+    <link href="./style.css" rel="stylesheet" type="text/css" />
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
+      <script src="./main.js"></script>
+  </head>
+  <body>
+    <div class="main"> 
+      <img src="https://lh3.googleusercontent.com/-LlkmOfMOieE/Uvzn-dgUBII/AAAAAAAAACA/Z2mhyfHwnKc/s530-p/CookieSpritebig.png">
+      <h3><span class="js-click-counter">0</span> Cookies!!!</h3>
+      <button class="js-clicker">Get Cookie!</button>
     </div>
-    <div class="box2"></div>
-    <div class="box"></div>
-  </div>
-</body>
+  </body>
 </html>
