small change to portfolio and added checkpoint 3 to index.html

--- a/Checkpoint2/portfolio.html
+++ b/Checkpoint2/portfolio.html
@@ -13,8 +13,8 @@
   <header>
   <div class="links">
     <div class="home"><a href='#'>Home</a></div>
-    <div class="aboutMe"><a href='#'>About Me</a></div>
-    <div class="work"><a href='https://chasewoods89.github.io/checkpoint1/'>Work</a></div>
+    <div class="aboutMe"><a href='/03week/airplane/index.html'>UX Airline</a></div>
+    <div class="work"><a href='https://chasewoods89.github.io/checkpoint1/'>Tattoo Shop</a></div>
     <div class="contact"><a href='#'>Contact</a></div>
   </div>  
   </header>
