--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="./02week/blog/index.html">Blog</a>
     <a href="./03week/airplane/index.html">Airplane</a>
     <a href="./Checkpoint2/portfolio.html">Checkpoint 2</a>
+    <a href="./checkpoint3/index.html">Checkpoint 3</a>
   </body>
 </html>
