ready to submit portfolia and checkpoint3

--- a/checkpoint-3/index.html
+++ b/checkpoint-3/index.html
@@ -13,7 +13,7 @@
     <div id="message-display">
       <p>CLICK THE BAD GUY!</p>
     </div>
-    <div id="screen-1">
+    <div id="screen-1"> <!-- space invader screen -->
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
