updated cookie clicker

--- a/checkpoint3/alternateporfolio/index.html
+++ b/checkpoint3/alternateporfolio/index.html
@@ -18,7 +18,10 @@
 </div>
 <div class="lantern">
 <div id="textbox>">
+    <div id="flipp">
     <h1>The Lantern</h1>
+</div>
+<div id="panell"></div>
 </div>
 </div>
 <div class="openstory">
