--- a/Checkpoint-3/index.html
+++ b/Checkpoint-3/index.html
@@ -8,11 +8,19 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./style.css" />
 </head>
 <body>
-  <h1>Clicker Game</h1>
-  <div class="box" id="counter-1">1</div>
-    <div class="box" id="counter-10">10</div>
-    <div class="box" id="counter-100">100</div>
-    <div class="box" id="click-all">Click All</div>  
+  <h1>Pew Pew Game</h1>
+  <div class="box" id="gun"></div> 
+
+  <div class="shake-box" id="shake"></div>
+
+  <input type="button" id="click-box" value="fire"></div>
+
+  <div class="weapon-box" id="weapons">
+    <div class="weapon1">Sub Machine Gun</div>
+    <div class="weapon2">Assault Rifle</div>
+    <div class="weapon3">Bazooka!!!</div>
+  </div>
+
     
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./script.js"></script>
