added border radius

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -22,9 +22,9 @@
     <main>
         <div class="forms">
             <div class="buttons">
-                <button type="button" class="flightbtn"> </button>
-                <button type="button" class="hotelbtn"> </button>
-                <button type="button" class="carbtn"> </button>
+                <button type="button" class="flightbtn" class="btn"> </button>
+                <button type="button" class="hotelbtn" class="btn"> </button>
+                <button type="button" class="carbtn" class="btn"> </button>
             </div>
             <form class="flights"> 
             <!-- name attribute? -->
