fixed header spacing

--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -14,8 +14,7 @@
            <img class="logo" src="img/logo.png"> 
       <nav>
             <img src="img/home-icon.png" alt="home-icon">
-            <a href="/index.html">
-                Home</a>
+            <a href="/index.html">Home</a>
             <img src="img/deal-icon.png" alt="deal-icon">
             <a href="">Travel Deals</a>
             <img src="img/schedule-icon.png" alt="schedule-icon">
