--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -36,7 +36,12 @@
                 <input type="text" class="input" placeholder="mm/dd/yyyy">
             </div>
             <div class="radiobutton">
-                input
+                <input type="radio" id="return"
+                       name="drone" value="return"/>
+                <label for="return">Return</label>
+                <input type="radio" id="one way"
+                       name="drone" value="one way"/>
+                <label for="return">One Way</label>
             </div>
         </div>
     </main>
