My ACA Portfolio link update

--- a/index.html
+++ b/index.html
@@ -26,5 +26,58 @@
           <a href="./03week/airplane/index.html">Airplane</a>
         </section>
 
+        <section class="week-link"> 
+          <a href="./04week/nasa/index.html">NASA</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./04week/tomorrows-technology/index.html">tomorrows-technology</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./04week/welcome-to-our-site/img/">welcome-to-our-site</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./05week/transitions-and-transformations/index.html">transitions-and-transformations</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./05week/travel-gram/index.html">travel-gram</a>
+        </section>
+        
+        <section class="week-link"> 
+          <a href="./06week/dice/index.html">Dice</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="#">FizzBuzz</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="#">Javascripting</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./07week/calculator/index.html">calculator</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./07week/dom-practice/index.html">Shopping Cart</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./08week/dom-events/index.html">Dom Events</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./09week/customer-satisfaction/index.html">Customer-Satisfaction</a>
+        </section>
+
+        <section class="week-link"> 
+          <a href="./09week/towers-of-hanoi/index.html">Towers of Hanoi</a>
+        </section>
+
+
   </body>
 </html>
