--- a/Checkpoint2/portfolio.html
+++ b/Checkpoint2/portfolio.html
@@ -13,7 +13,7 @@
   <header>
   <div class="links">
     <div class="home"><a href='#'>Home</a></div>
-    <div class="aboutMe"><a href='/03week/airplane/index.html'>UX Airline</a></div>
+    <div class="aboutMe"><a href='../03week/airplane/index.html'>UX Airline</a></div>
     <div class="work"><a href='https://chasewoods89.github.io/checkpoint1/'>Tattoo Shop</a></div>
     <div class="contact"><a href='#'>Contact</a></div>
   </div>  
