--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
         </section>
 
         <section class="week-link"> 
+          <a href="./08week/tic-tac-toe/index.html">Tic Tac Toe</a>
+        </section>
+
+        <section class="week-link"> 
           <a href="./09week/customer-satisfaction/index.html">Customer-Satisfaction</a>
         </section>
 
