--- a/Checkpoint2/portfolio.html
+++ b/Checkpoint2/portfolio.html
@@ -35,7 +35,7 @@
     </div>
    <div class="aboutme2">
     <p>
-      I have a background in QA and was taught in HTML, CSS, and JavaScript (NEVER SAY JAVA). I'm currently learning C#, UNITY, and using Twine.
+      I have a background in QA and was taught in HTML, CSS, and JavaScript (NEVER SAY JAVA). I'm currently learning C# and UNITY.
     </p>
     </div>
   </div>
