--- a/Checkpoint 2.0/index.html
+++ b/Checkpoint 2.0/index.html
@@ -9,14 +9,15 @@
 <body>
     <div class="maincontain">
         <div class="banner">
-            <h1>Chris Weeks</h1>
+            <img src="./design logo white.png" id="logo" alt="logo">
         </div>
             <div class="header">
             <div class="nav">
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Resume</li>
+                        <a href="../Checkpoint 2.0/index.html"><li>Home</li></a>
+                        <a href=><li>About</li></a>
+                        <a href="../02week/blog/index.html"><li>Blog</li></a>
+                        <a href="../01week/resume/index.html"><li>Resume</li></a>
                     <li>Contact</li>
                 </ul>
             </div>
@@ -24,7 +25,8 @@
         <div class="bodycontain">
             <div class="tophalf">
                 <div class="spencerriley">
-                    <img src="../Checkpoint 2.0/iphone touch home.png" width = "320px" height = "320px" alt="project image">
+                    <a href="https://www.chrisweeksdesign.com/touch-page" target="_blank">
+                    <img src="../Checkpoint 2.0/iphone touch home.png" width = "320px" height = "320px" alt="project image"></a>
                 </div>
                 <div class="spencerriley">
                     <img src="../Checkpoint 2.0/Welcome to our site png.png" width = "320px" height = "320px" alt="project image">
