--- a/Checkpoint-3/index.html
+++ b/Checkpoint-3/index.html
@@ -13,14 +13,16 @@
   <h1>Pew Pew Game</h1>
   <div class="box" id="gun"></div>
 
+  <div class="shake"></div>
+
   <div class="shake-box" id="shake"></div>
 
   <input type="button" id="click-box" value="fire"></div>
 
   <div class="weapon-box" id="weapons">
     <div class="weapon1">Sub Machine Gun</div>
-    <div class="weapon2">Assault Rifle</div>
-    <div class="weapon3">Bazooka!!!</div>
+    <div class="weapon2"></div>
+    <div class="weapon3"></div>
   </div>
 
 
