fixed linkedin link

--- a/Checkpoint2/portfolio.html
+++ b/Checkpoint2/portfolio.html
@@ -47,7 +47,7 @@
       <a href='#'><img src="../Images/if_facebook_social_connect_account_profile_1083203.png"></a>
       <a href='https://www.instagram.com/chasebrutal'><img src="../Images/if_instragram_social_connect_account_profile_1083201.png"></a>
       <a href='#'><img src="../Images/if_twitter_social_connect_account_profile_1083198.png"></a>
-      <a href='https://www.linkedin.com/chasewoods89'><img src="../Images/if_linkedin_social_connect_account_profile_1083200.png"></a>
+      <a href='https://www.linkedin.com/in/chasewoods89'><img src="../Images/if_linkedin_social_connect_account_profile_1083200.png"></a>
     </div>
   </div>
   </div>
