--- a/06week/Portfolio /index.html
+++ b/06week/Portfolio /index.html
@@ -1,37 +1,51 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Mali|Raleway" rel="stylesheet">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Mali|Raleway" rel="stylesheet">
 </head>
+
 <body>
         <div class="main-container">
                 <header class="main-head">joanna filipowska</header>
                 <nav class="main-nav">
                         <div class="work">Work</div>
                         <div class="contact">Contact</div>
+                        <div id="effect"></div>
                         <div class="bio">Bio</div>
                 </nav>
                 <article class="content">
-                    <h1>Hello World!</h1>
-                    <h2>My name is Joanna</h2>
-                    <p>Freelancer developer based in Austin, TX. Let me take you into a Java Script adventure</p>
-                </article> 
+                
+                        <h1 class="world">Hello World!</h1>
+                        <h2>My name is Joanna</h2>
+                        <p>Freelancer developer based in Austin, TX. Let me take you into a Java Script adventure</p>
+                </article>
                 <aside class="side"></aside>
                 <footer class="main-footer">
                         <div class="footer-social-icons">
                                 <h4 class="follow">Follow me</h4>
-                    <ul class="social-icons">
-                            <a href="https://www.facebook.com/"><li class="facebook">Facebook</li></a>
-                            <a href="https://github.com/JoannaFilipowska"><li class="GitHub">GitHub</li></a>
-                            <a href="https://pl.linkedin.com//"><li class="linkedin">Linkedin</li></a>
-                    </ul>
-                    </div>
+                                <ul class="social-icons">
+                                        <a href="https://www.facebook.com/">
+                                                <li class="facebook">Facebook</li>
+                                        </a>
+                                        <a href="https://github.com/JoannaFilipowska">
+                                                <li class="GitHub">GitHub</li>
+                                        </a>
+                                        <a href="https://pl.linkedin.com//">
+                                                <li class="linkedin">Linkedin</li>
+                                        </a>
+                                </ul>
+                        </div>
                 </footer>
         </div>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <script type="text/javascript" src="./script.js"></script>
 </body>
+
 </html>
