updated landing page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <li><a href="./09week/towers-of-hanoi/index.html">Towers of Hanoi</a></li>
 
     <li><a href="./09week/customer-satisfaction/index.html">Customer Satisfaction</a></li>
+
+    <li><a href="./Checkpoint-3/index.html"></a></li>
     
   </ul>
 
