--- a/Checkpoint-3/index.html
+++ b/Checkpoint-3/index.html
@@ -20,7 +20,7 @@
   <input type="button" id="click-box" value="fire"></div>
 
   <div class="weapon-box" id="weapons">
-    <div class="weapon1">Sub Machine Gun</div>
+    <div class="weapon1"></div>
     <div class="weapon2"></div>
     <div class="weapon3"></div>
   </div>
