--- a/03week/airplane/index.html
+++ b/03week/airplane/index.html
@@ -13,41 +13,40 @@
     <main>
        <header>
            <img src="./img/logo.png">
-            <nav class="cat">
+           <nav class="cat">
                <img src="./img/home-icon.png"><a href="_blank">Home</a>
                <img src="./img/deal-icon.png"><a href="_blank">Travel Deals</a>
                <img src="./img/schedule-icon.png"><a href="_blank">Flight Schedule</a>
                <img src="./img/login-icon.png"><a href="_blank">Register/Logn</a>
-            </nav>
+           </nav>
        </header>
        <section>
-            <div>
+           <div>
                 <button class="one"><img src="./img/plane-icon.png"></button>
                 <button class="two"><img src="./img/hotel-icon.png"></button>
                 <button class="three"><img src="./img/car-icon.png"></button>
-            </div>
+           </div>
             <div class="dog">
                 <form>
                 <input type="text" name="depart" placeholder="Depart">
                 <input type="text" name="arrive" placeholder="Arrive">
                 </form>
-            </div>
+            </div><br>
             <div class="pig">
                 <form>
                 <input type="text" name="date1" value="mm/dd/yyy">
                 <input type="text" name="date2" value="mm/dd/yyyy">
                 </form>
-            </div>
+            </div><br>
             <div class="cow">
-                <Form>
-                    <input type="number" name="dropdown" 
-                    <input type="radio" name="x" value="x">
+                <Form class="box">
+                Passengers <input type="number" name="dropdown" value="1">
                 </Form>
-                <article>Passengers</article>
-                <article># of passengers</article>
-                <article>Return</article>
-                <article>One Way</article>
-                <button class="bottom">Search Flights</button>
+                <form class="circle">
+                Return:<input type="radio" name="selection" value="Return">
+                One Way:<input type="radio" name="selection" value="One Way">
+                </Form><br>
+            <button class="bottom">Search Flights</button>
        </section>
     </main>
 </body>
