--- a/04week/tomorrows-technology/index.html
+++ b/04week/tomorrows-technology/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Biryani:400,800" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     <script src="main.js"></script>
 </head>
 
@@ -41,14 +41,34 @@
             <div class="top-stories">
                 <ul>
                     <h2><b>TOP STORIES</b></h2>
-                    <li><b>Stanford Researchers Make Artificial Skin
-                            That Senses Touch</b></li>
+                    <li><b>Stanford Researchers Make Artificial Skin That Senses Touch</b></li>
                     <li><b>3 New Ways To Wear Your Favorite Chambray Shirt</b></li>
                     <li><b>Where To Buy Your Next Rug</b></li>
                     <li><b>Chukkas That Offer Casual, Comfortable Style</b></li>
                 </ul>
             </div>
         </div>
+
+        <footer class="footer">
+            <div class="useful">
+                <ul>
+                    <h4>Useful Links</h4>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="index.html">Jobs</a></li>
+                    <li><a href="index.html">Team</a></li>
+                    <li><a href="index.html">Advertise</a></li>
+                    <li><a href="index.html">Terms</a></li>
+                </ul>
+            </div>
+            <div class="social">
+                <ul>
+                    <h4>Social Media</h4>
+                    <li><a href="https://www.facebook.com">Facebook<i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.instagram.com">Instagram<i class="fab fa-instagram"></i></a></li>
+                    <li><a href="https://www.twitter.com">Twitter<i class="fab fa-twitter"></i></a></li>
+                </ul>
+            </div>
+        </footer>
 
     </main>
 
