--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+    <title>
+        COMPANY NAME
+    </title>
+<body>
+    <header>
+        <h1> 
+            COMPANY NAME
+        </h1>
+        <nav>
+            HOME
+            PRODUCTS
+            PRODCUTS 2
+            ABOUT US
+            CONTACT
+        </nav>        
+    </header>
+    <main>
+        <section>
+            <article>
+                <p>
 
+                </p>
+            </article>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
+</body>
+</html>
