--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Sound Guy Envy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
 
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
+</head>
+<body>
+    <header class="flex">
+        <h1 class="name">In Tune Again</h1>
+        <div class="contact">
+            <ul class="flex">
+                <li><button class="social"></button></li>
+                <li><button class="social"></button></li>
+                <li><button class="social"></button></li>
+                <li><button class="social"></button></li>
+                <li><button class="social"></button></li>
+            </ul>
+        </div>
+        <div class="switches flex">
+            <button class="standby"></button>
+            <button class="power"></button>
+        </div>
+    </header>
+    <main class="flex">
+        <div class="links">
+            <a class="about" href="">About</a>
+            <a class="services" href="">Services</a>
+            <a class="gallery" href="">Gallery</a>
+        </div>
+    </main>
+</body>
+</html>
