worked on stuff

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -29,7 +29,7 @@
             <button class="power"></button>
         </div>
     </header>
-    <main class="flex">
+    <main>
         <div class="links">
             <a class="about" href="">About</a>
             <a class="services" href="">Services</a>
