Checkpoint One Turn In

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <title>Checkpoint 1</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" href="reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul class="main-nav">
+                <li>
+                    <a href="#" class="logo"></a>
+                </li>
+                <li>
+                    <a href="#">GAME</a>
+                </li>
+                <li>
+                    <a href="#">STORY</a>
+                </li>
+                <li>
+                    <a href="#">NEWS</a>
+                </li>
+                <li>
+                    <a href="#">FORUMS</a>
+                </li>
+                <li>
+                    <a href="#">SHOP</a>
+                </li>
+                <li class="nav-break">
+                    <a href="#">ESPORTS</a>
+                </li>
+                <li>
+                    <a href="#">LOGIN</a>
+                </li>
+                <li>
+                    <a href="#">TRY FREE</a>
+                </li>
+            </ul>
+
+        </nav>
+    </header>
+    <main>
+        <!-----------------------Background Animation------------------------------------------------------>
+        <video autoplay muted loop class="fullscreen">
+            <source src="/VIDEO/EO0JCNO2PZ7W1509567828234.mp4" type="video/mp4">
+        </video>
+    </main>
+    <!----------------------------Header Text with Buttons------------------------------------------------------------------------->
+    <article class="main-text">
+        <ul>
+            <li>
+                <h2>BATTLE FOR AZEROTH NOW LIVE!</h2>
+            </li>
+            <li>
+                <h3>A new chapter of the epic Warcraft saga is here with brand-new features, gameplay, story, and more!</h3>
+            </li>
+            <li>
+                <input type="button" value="BUY NOW" class="buy"><input type="button" value="LEARN MORE" class="learn">
+            </li>
+        </ul>
+
+    </article>
+<!---------------------------Bottom Img Boxes------------------------------------------------------------------------------>
+    <article class="img-boxes">
+        <ul>
+        <li class="one">
+            <h2>Dev Watercooler: Inside the World of Warcraft Classic BlizzCon Demo</h2>
+        </li>
+        <li class="two">
+            <h2>The Horseman Rides: Hallow’s End is Nigh!</h2>
+        </li>
+        <li class="three">
+            <h2>World of Warcraft Student Art Contest 2018</h2>
+        </li>
+        <li class="four">
+            <h2>Watch the Live Q&A VoD with Ion Hazzikostas Here!</h2>
+        </li>
+        </ul>
+    
+    </article>
+
+
+</body>
+
+</html>
