decided on company

--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -11,19 +11,19 @@
 </head>
 
 <title>
-    COMPANY NAME
+    Rent-a-Dog
 </title>
 
 <body>
 
     <header>
         <h1>
-            COMPANY NAME
+            <img class ="logo" src="img/logo.png" alt="Company Logo">
         </h1>
         <nav>
             <div class="nav">HOME</div>
-            <div class="nav">PRODUCTS</div>
-            <div class="nav">ABOUT US</div>
+            <div class="nav">TEAM</div>
+            <div class="nav">MISSION</div>
             <div class="nav">CONTACT</div>
         </nav>
     </header>
